tests/ui/pin-ergonomics/pattern-matching-mix-deref-pattern.normal.stderr
error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:32:9
   |
LL |     let Foo { x, y } = foo.as_mut();
   |         ^^^^^^^^^^^^   ------------ this expression has type `Pin<&mut Foo<T, U>>`
   |         |
   |         expected `Pin<&mut Foo<T, U>>`, found `Foo<_, _>`
   |
   = note: expected struct `Pin<&mut Foo<T, U>>`
              found struct `Foo<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     let Foo { x, y } = *foo.as_mut();
   |                        +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:38:9
   |
LL |     match foo.as_mut() {
   |           ------------ this expression has type `Pin<&mut Foo<T, U>>`
LL |
LL |         Foo { x, y } => {}
   |         ^^^^^^^^^^^^ expected `Pin<&mut Foo<T, U>>`, found `Foo<_, _>`
   |
   = note: expected struct `Pin<&mut Foo<T, U>>`
              found struct `Foo<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     match *foo.as_mut() {
   |           +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:44:9
   |
LL |     let _ = || match foo.as_mut() {
   |                      ------------ this expression has type `Pin<&mut Foo<T, U>>`
LL |
LL |         Foo { x, y } => {}
   |         ^^^^^^^^^^^^ expected `Pin<&mut Foo<T, U>>`, found `Foo<_, _>`
   |
   = note: expected struct `Pin<&mut Foo<T, U>>`
              found struct `Foo<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     let _ = || match *foo.as_mut() {
   |                      +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:51:9
   |
LL |     let Foo { x, y } = foo;
   |         ^^^^^^^^^^^^   --- this expression has type `Pin<&Foo<T, U>>`
   |         |
   |         expected `Pin<&Foo<T, U>>`, found `Foo<_, _>`
   |
   = note: expected struct `Pin<&Foo<T, U>>`
              found struct `Foo<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     let Foo { x, y } = *foo;
   |                        +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:57:9
   |
LL |     match foo {
   |           --- this expression has type `Pin<&Foo<T, U>>`
LL |
LL |         Foo { x, y } => {}
   |         ^^^^^^^^^^^^ expected `Pin<&Foo<T, U>>`, found `Foo<_, _>`
   |
   = note: expected struct `Pin<&Foo<T, U>>`
              found struct `Foo<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     match *foo {
   |           +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:63:9
   |
LL |     let _ = || match foo {
   |                      --- this expression has type `Pin<&Foo<T, U>>`
LL |
LL |         Foo { x, y } => {}
   |         ^^^^^^^^^^^^ expected `Pin<&Foo<T, U>>`, found `Foo<_, _>`
   |
   = note: expected struct `Pin<&Foo<T, U>>`
              found struct `Foo<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     let _ = || match *foo {
   |                      +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:70:9
   |
LL |     let Bar(x, y) = bar.as_mut();
   |         ^^^^^^^^^   ------------ this expression has type `Pin<&mut Bar<T, U>>`
   |         |
   |         expected `Pin<&mut Bar<T, U>>`, found `Bar<_, _>`
   |
   = note: expected struct `Pin<&mut Bar<T, U>>`
              found struct `Bar<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     let Bar(x, y) = *bar.as_mut();
   |                     +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:76:9
   |
LL |     match bar.as_mut() {
   |           ------------ this expression has type `Pin<&mut Bar<T, U>>`
LL |
LL |         Bar(x, y) => {}
   |         ^^^^^^^^^ expected `Pin<&mut Bar<T, U>>`, found `Bar<_, _>`
   |
   = note: expected struct `Pin<&mut Bar<T, U>>`
              found struct `Bar<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     match *bar.as_mut() {
   |           +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:82:9
   |
LL |     let _ = || match bar.as_mut() {
   |                      ------------ this expression has type `Pin<&mut Bar<T, U>>`
LL |
LL |         Bar(x, y) => {}
   |         ^^^^^^^^^ expected `Pin<&mut Bar<T, U>>`, found `Bar<_, _>`
   |
   = note: expected struct `Pin<&mut Bar<T, U>>`
              found struct `Bar<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     let _ = || match *bar.as_mut() {
   |                      +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:89:9
   |
LL |     let Bar(x, y) = bar;
   |         ^^^^^^^^^   --- this expression has type `Pin<&Bar<T, U>>`
   |         |
   |         expected `Pin<&Bar<T, U>>`, found `Bar<_, _>`
   |
   = note: expected struct `Pin<&Bar<T, U>>`
              found struct `Bar<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     let Bar(x, y) = *bar;
   |                     +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:95:9
   |
LL |     match bar {
   |           --- this expression has type `Pin<&Bar<T, U>>`
LL |
LL |         Bar(x, y) => {}
   |         ^^^^^^^^^ expected `Pin<&Bar<T, U>>`, found `Bar<_, _>`
   |
   = note: expected struct `Pin<&Bar<T, U>>`
              found struct `Bar<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     match *bar {
   |           +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:101:9
   |
LL |     let _ = || match bar {
   |                      --- this expression has type `Pin<&Bar<T, U>>`
LL |
LL |         Bar(x, y) => {}
   |         ^^^^^^^^^ expected `Pin<&Bar<T, U>>`, found `Bar<_, _>`
   |
   = note: expected struct `Pin<&Bar<T, U>>`
              found struct `Bar<_, _>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     let _ = || match *bar {
   |                      +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:108:9
   |
LL |     let NonPinProject { x } = foo;
   |         ^^^^^^^^^^^^^^^^^^^   --- this expression has type `Pin<&mut NonPinProject<T>>`
   |         |
   |         expected `Pin<&mut NonPinProject<T>>`, found `NonPinProject<_>`
   |
   = note: expected struct `Pin<&mut NonPinProject<T>>`
              found struct `NonPinProject<_>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     let NonPinProject { x } = *foo;
   |                               +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:113:9
   |
LL |     let NonPinProject { x } = bar;
   |         ^^^^^^^^^^^^^^^^^^^   --- this expression has type `Pin<&NonPinProject<U>>`
   |         |
   |         expected `Pin<&NonPinProject<U>>`, found `NonPinProject<_>`
   |
   = note: expected struct `Pin<&NonPinProject<U>>`
              found struct `NonPinProject<_>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     let NonPinProject { x } = *bar;
   |                               +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:121:9
   |
LL |     match foo {
   |           --- this expression has type `Pin<&mut NonPinProject<T>>`
LL |
LL |         NonPinProject { x } => {}
   |         ^^^^^^^^^^^^^^^^^^^ expected `Pin<&mut NonPinProject<T>>`, found `NonPinProject<_>`
   |
   = note: expected struct `Pin<&mut NonPinProject<T>>`
              found struct `NonPinProject<_>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     match *foo {
   |           +

error[E0308]: mismatched types
  --> $DIR/pattern-matching-mix-deref-pattern.rs:129:9
   |
LL |     match bar {
   |           --- this expression has type `Pin<&NonPinProject<U>>`
LL |
LL |         NonPinProject { x } => {}
   |         ^^^^^^^^^^^^^^^^^^^ expected `Pin<&NonPinProject<U>>`, found `NonPinProject<_>`
   |
   = note: expected struct `Pin<&NonPinProject<U>>`
              found struct `NonPinProject<_>`
help: consider dereferencing to access the inner value using the `Deref` trait
   |
LL |     match *bar {
   |           +

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0308`.
